--- a/rakesh/frontend_files/project.html
+++ b/rakesh/frontend_files/project.html
@@ -22,7 +22,7 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol>
-                <div class="carousel-inner">
+                <div class="carousel-inner col-xl-6">
                     <div class="carousel-item active">
                         <img src="https://res.cloudinary.com/dpz5nbfpu/image/upload/v1669747493/wepik-photo-mode-20221030-01438_zuyjxb.png" class="d-block w-100" alt="..." />
                     </div>
